[metadata]
name = formulate
author = Chris Burr
author_email = c.b@cern.ch
maintainer = The Scikit-HEP admins
maintainer_email = scikit-hep-admins@googlegroups.com
description = Convert between different style of formulae
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/scikit-hep/formulate
license = BSD 3-Clause License
keywords =
    formula
    conversion
    ROOT
    numexpr
    HEP
platforms =
    Any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development
    Topic :: Utilities

[options]
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*
packages = find:

install_requires =
    numpy >=1.13.3
    pyparsing>=2.1.9
    colorlog
    aenum
    scipy

[options.packages.find]
exclude =
    tests
[tool:pytest]
addopts = -ra -s -Wd
testpaths =
    tests

[bdist_wheel]
universal = 1

[tool.check-manifest]
ignore =
    .github
